        PR c++/36334         PR c++/37646         * tree.c (lvalue_p_1): Handle BASELINK.  A COMPONENT_REF to         a function isn't necessarily an lvalue. Take tree, not const_tree.         (lvalue_p, real_lvalue_p): Take tree, not const_tree.         * typeck.c (lvalue_or_else): Likewise.         * cp-tree.h: Adjust prototypes.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@143404 138bc75d-0d04-0410-961f-82ee72b054a4