gcc/testsuite/g++.dg/conversion/memfn2.C
@@ -1,0 +1,11 @@
+// PR c++/37646
+
+struct A
+{
+  void foo();
+
+  void bar(int i)
+  {
+    void (*p)() = i ? foo : foo; // { dg-error "invalid use of member" }
+  }
+};
